--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+<form action="/submit.php">
+  <label for="f_name">First name:</label><br>
+  <input type="text" id="f_name" name="f_name"><br>
+  <label for="l_name">Last name:</label><br>
+  <input type="text" id="l_name" name="l_name"><br><br>
+  <input type="submit" value="Submit">
+</form>
+  
 </body>
 </html>
