--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<form action="/submit.php" method="post">
+<form method="post" netlify>
   <label for="f_name">First name:</label><br>
   <input type="text" id="f_name" name="f_name"><br>
   <label for="l_name">Last name:</label><br>
