--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <input type="text" id="l_name" name="l_name"><br><br>
   <input type="submit" value="Submit">
 </form>
+
+  <?php
+    echo "hi";
+  ?>
   
 </body>
 </html>
