--- a/index.html
+++ b/index.html
@@ -2,13 +2,29 @@
 <html>
 <body>
 
-<form method="post" name="Contact Form" netlify>
-  <label for="f_name">First name:</label><br>
-  <input type="text" id="f_name" name="f_name"><br>
-  <label for="l_name">Last name:</label><br>
-  <input type="text" id="l_name" name="l_name"><br><br>
-  <input type="submit" value="Submit">
-</form>
+<h3>Contact Form</h3>
+
+<div class="container">
+  <form method="post" name="Contact Form" netlify>
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</div>
   
 </body>
 </html>
