--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <h3>Contact Form</h3>
 
-<div class="container" style="width: 50%;">
-  <form method="post" name="Contact Form" netlify style="width: 50%;">
+<div class="container">
+  <form method="post" name="Contact Form" netlify>
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
