--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </select>
 
     <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    <textarea id="comment" name="comment" placeholder="Comment" style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
   </form>
