--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <option value="usa">USA</option>
     </select>
 
-    <label for="subject">Subject</label>
+    <label for="comment">Comment</label>
     <textarea id="comment" name="comment" placeholder="Comment" style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
