--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <label for="comment">Comment</label>
     <textarea id="comment" name="comment" placeholder="Comment" style="height:200px"></textarea>
 
-    <input type="submit" value="Submit" id="contact-form-btn">
+    <input type="submit" value="Submit">
   </form>
 </div>
   
@@ -74,5 +74,6 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+  width: 50%;
 }
 </style>
