--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <label for="comment">Comment</label>
     <textarea id="comment" name="comment" placeholder="Comment" style="height:200px"></textarea>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" id="contact-form-btn">
   </form>
 </div>
   
