--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <div class="container">
   <form method="post" name="Contact Form" netlify>
     <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <input type="text" id="fname" name="firstname" placeholder="Your first name">
 
     <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <input type="text" id="lname" name="lastname" placeholder="Your last name">
+
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email" placeholder="Email">
 
     <label for="country">Country</label>
     <select id="country" name="country">
